--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,42 @@
-.App {
-  text-align: center;
+.app {
+  padding-inline: 2rem;
+  padding-block: 1rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.nav-container {
   display: flex;
-  flex-direction: column;
+  /* border: 1px solid magenta; */
+
+}
+
+
+
+.list-items {
+  padding-right: 2rem;
+  display: flex;
+  gap: 1rem;
+  flex-grow: 1;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: end;
 }
 
-.App-link {
-  color: #61dafb;
+.btn {
+  border: none;
+  padding-inline: 1.5rem;
+  background-color: #e7005e;
+  color: #FFF;
+  font-weight: 600;
+  font-size: 1rem;
+  border-radius: 16px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.line {
+  margin-block: 1rem;
+  height: 0.1rem;
+  background-color: #fff;
+  padding-inline: 2rem;
+}
+
+.app p {
+  margin-block: 1rem;
 }
